# embedded-cli-rs

./: Cargo.toml
cli/: Cargo.toml
cli-macros/: Cargo.toml  expanded_auto_bound.rs  expanded_expr_with.rs  justfile
cli-macros/src/: derive_main_command.rs  expr_with.rs  lib.rs
cli-macros/tests/: main_command_structure_ref.txt  tests.rs
cli-macros/tests/expand/: test_main_command_macro.expanded.rs  test_main_command_macro.rs
